--- a/style/main.css
+++ b/style/main.css
@@ -64,8 +64,8 @@ html {
 
 .section-about-content h3 {
   font-family: "Merriweather Sans";
-  font-size: 42px;
-  font-weight: bold;
+  font-size: 32px;
+  font-weight: 500;
   color: #000;
 }
 
@@ -100,8 +100,8 @@ html {
 
 .section-services-content h3 {
   font-family: "Merriweather Sans";
-  font-size: 42px;
-  font-weight: bold;
+  font-size: 32px;
+  font-weight: 500;
   color: #000;
 }
 
@@ -130,8 +130,8 @@ html {
 
 .section-portofolio-content h3 {
   font-family: "Merriweather Sans";
-  font-size: 42px;
-  font-weight: bold;
+  font-size: 32px;
+  font-weight: 500;
   color: #000;
 }
 
@@ -181,10 +181,43 @@ html {
   transition: all 1s;
 }
 
+.section-messages-content {
+  margin-top: 100px;
+}
+
+.section-messages-content h3 {
+  font-family: "Merriweather Sans";
+  font-size: 32px;
+  font-weight: 500;
+  color: #000;
+}
+
+.section-messages-content form {
+  margin-top: 30px;
+}
+
+.section-messages-content .figure {
+  margin-top: 30px;
+}
+
+.section-messages-content .figure img {
+  max-height: 70px;
+}
+
+footer {
+  margin-top: 100px;
+  font-size: 18px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #4e4e4e;
+}
+
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #020277;
+  background-color: #4a4ae0;
   margin: 0 auto;
 }
 /*# sourceMappingURL=main.css.map */
