--- a/style/main.scss
+++ b/style/main.scss
@@ -62,8 +62,8 @@ html {
     margin-top: 120px;
     h3 {
         font-family: "Merriweather Sans";
-        font-size: 42px;
-        font-weight: bold;
+        font-size: 32px;
+        font-weight: 500;
         color: #000;
     }
     .a-information {
@@ -98,8 +98,8 @@ html {
     margin-top: 120px;
     h3 {
         font-family: "Merriweather Sans";
-        font-size: 42px;
-        font-weight: bold;
+        font-size: 32px;
+        font-weight: 500;
         color: #000;
     }
     .a-information {
@@ -124,8 +124,8 @@ html {
     margin-top: 120px;
     h3 {
         font-family: "Merriweather Sans";
-        font-size: 42px;
-        font-weight: bold;
+        font-size: 32px;
+        font-weight: 500;
         color: #000;
     }
     .a-information {
@@ -171,9 +171,37 @@ html {
     // }
 }
 
+.section-messages-content {
+    margin-top: 100px;
+    h3 {
+        font-family: "Merriweather Sans";
+        font-size: 32px;
+        font-weight: 500;
+        color: #000;
+    }
+    form {
+        margin-top: 30px;
+    }
+    .figure {
+        margin-top: 30px;
+        img {
+            max-height: 70px;
+        }
+    }
+}
+
+footer {
+    margin-top: 100px;
+    font-size: 18px;
+    a {
+        text-decoration: none;
+        color: #4e4e4e;
+    }
+}
+
 .line-mf {
     width: 40px;
     height: 5px;
-    background-color: #020277;
+    background-color: #4a4ae0;
     margin: 0 auto;
 }
