update file & maintence

--- a/style/main.css
+++ b/style/main.css
@@ -21,13 +21,13 @@ html {
 .navbar .navbar-nav .active {
   font-size: 18px;
   font-weight: 500;
-  color: #020277 !important;
+  color: #363636 !important;
 }
 
 .navbar .navbar-nav a {
   font-size: 18px;
   font-weight: normal;
-  color: #020277 !important;
+  color: #363636 !important;
 }
 
 .section-content-header h5 {
@@ -37,24 +37,25 @@ html {
 }
 
 .section-content-header h1 {
+  font-family: "Merriweather Sans";
   font-weight: bold;
   font-size: 48px;
-  color: #020277;
+  color: #0000be;
 }
 
 .section-content-header p {
   font-weight: 300;
   font-size: 18px;
-  color: #c2c2c2;
+  color: #494949;
 }
 
 .section-content-header .btn-hire {
-  background-color: #0e0ef0;
+  background-color: #0d6efd;
   color: #fff !important;
 }
 
 .section-content-header .btn-hire:hover {
-  background-color: #0303b3;
+  background-color: #085cda;
   color: #fff;
 }
 
@@ -94,6 +95,10 @@ html {
   font-size: 16px;
 }
 
+.section-education-content .figure img {
+  max-height: 80px;
+}
+
 .section-services-content {
   margin-top: 120px;
 }
@@ -111,6 +116,10 @@ html {
   font-size: 18px;
 }
 
+.section-services-content .services-content {
+  margin-top: 50px;
+}
+
 .section-services-content h5 {
   font-family: "Merriweather Sans";
   font-size: 20px;
@@ -122,6 +131,22 @@ html {
   color: #363636;
   font-weight: normal;
   font-size: 16px;
+}
+
+.section-services-content .s-box {
+  border-radius: 12px;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 4px 4px rgba(95, 95, 95, 0.3);
+          box-shadow: 0px 4px 4px rgba(95, 95, 95, 0.3);
+  margin-bottom: 20px;
+}
+
+.section-services-content .s-box .figure {
+  padding-top: 15px;
+}
+
+.section-services-content .s-box .figure img {
+  max-height: 80px;
 }
 
 .section-portofolio-content {
@@ -204,20 +229,79 @@ html {
   max-height: 70px;
 }
 
+.section-messages-content .line-mf {
+  width: 40px;
+  height: 5px;
+  background-color: #0d6efd;
+  margin: 0;
+}
+
+.section-messages-content input {
+  border-radius: 20px;
+}
+
+.section-messages-content textarea {
+  border-radius: 20px;
+  height: 100px;
+}
+
 footer {
-  margin-top: 100px;
+  margin-top: -40px;
   font-size: 18px;
 }
 
 footer a {
   text-decoration: none;
-  color: #4e4e4e;
+  color: #fff;
+}
+
+footer a:hover {
+  color: #020277;
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
+}
+
+footer p {
+  margin-top: -45px;
+  color: #fff;
 }
 
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #4a4ae0;
+  background-color: #0d6efd;
   margin: 0 auto;
+}
+
+.to-top {
+  background: #0d6efd;
+  position: fixed;
+  bottom: 16px;
+  right: 30px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 24px;
+  color: #fff;
+  text-decoration: none;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.active {
+  bottom: 30px;
+  pointer-events: auto;
+  opacity: 1;
 }
 /*# sourceMappingURL=main.css.map */
