--- a/style/main.scss
+++ b/style/main.scss
@@ -22,12 +22,12 @@ html {
         .active {
             font-size: 18px;
             font-weight: 500;
-            color: #020277 !important;
+            color: #363636 !important;
         }
         a {
             font-size: 18px;
             font-weight: normal;
-            color: #020277 !important;
+            color: #363636 !important;
         }
     }
 }
@@ -39,20 +39,23 @@ html {
         font-weight: 200;
     }
     h1 {
+        font-family: "Merriweather Sans";
         font-weight: bold;
         font-size: 48px;
-        color: #020277;
+        color: #0000be;
+        // color: #020277;
+        // color: #004cbe;
     }
     p {
         font-weight: 300;
         font-size: 18px;
-        color: #c2c2c2;
+        color: #494949;
     }
     .btn-hire {
-        background-color: #0e0ef0;
+        background-color: #0d6efd;
         color: #fff !important;
         &:hover {
-            background-color: #0303b3;
+            background-color: #085cda;
             color: #fff;
         }
     }
@@ -92,6 +95,11 @@ html {
             font-size: 16px;
         }
     }
+    .figure {
+        img {
+            max-height: 80px;
+        }
+    }
 }
 
 .section-services-content {
@@ -107,6 +115,9 @@ html {
         font-weight: normal;
         font-size: 18px;
     }
+    .services-content {
+        margin-top: 50px;
+    }
     h5 {
         font-family: "Merriweather Sans";
         font-size: 20px;
@@ -117,6 +128,18 @@ html {
         color: #363636;
         font-weight: normal;
         font-size: 16px;
+    }
+    .s-box {
+        border-radius: 12px;
+        background: #ffffff;
+        box-shadow: 0px 4px 4px rgba(95, 95, 95, 0.3);
+        margin-bottom: 20px;
+        .figure {
+            padding-top: 15px;
+            img {
+                max-height: 80px;
+            }
+        }
     }
 }
 
@@ -188,20 +211,69 @@ html {
             max-height: 70px;
         }
     }
+    .line-mf {
+        width: 40px;
+        height: 5px;
+        background-color: #0d6efd;
+        margin: 0;
+    }
+    input {
+        border-radius: 20px;
+    }
+    textarea {
+        border-radius: 20px;
+        height: 100px;
+    }
 }
 
 footer {
-    margin-top: 100px;
+    margin-top: -40px;
     font-size: 18px;
     a {
         text-decoration: none;
-        color: #4e4e4e;
+        color: #fff;
+        &:hover {
+            color: #020277;
+            transition: 0.7s;
+        }
+    }
+    p {
+        margin-top: -45px;
+        color: #fff;
     }
 }
 
 .line-mf {
     width: 40px;
     height: 5px;
-    background-color: #4a4ae0;
+    background-color: #0d6efd;
     margin: 0 auto;
 }
+
+// to-top
+.to-top {
+    background: #0d6efd;
+    position: fixed;
+    bottom: 16px;
+    right: 30px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    color: #fff;
+    text-decoration: none;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.4s;
+}
+
+.active {
+    bottom: 30px;
+    pointer-events: auto;
+    opacity: 1;
+}
+
+// End to-top
