--- a/style/main.css
+++ b/style/main.css
@@ -130,10 +130,12 @@ html {
 .section-services-content p {
   color: #363636;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 18px;
 }
 
-.section-services-content .s-box {
+.section-services-content .card {
+  max-height: 300px !important;
+  min-height: 300px !important;
   border-radius: 12px;
   background: #ffffff;
   -webkit-box-shadow: 0px 4px 4px rgba(95, 95, 95, 0.3);
@@ -141,11 +143,11 @@ html {
   margin-bottom: 20px;
 }
 
-.section-services-content .s-box .figure {
-  padding-top: 15px;
+.section-services-content .card .figure {
+  padding-top: 30px;
 }
 
-.section-services-content .s-box .figure img {
+.section-services-content .card .figure img {
   max-height: 80px;
 }
 
@@ -185,7 +187,7 @@ html {
 }
 
 .section-portofolio-content .p-box {
-  margin-bottom: 3rem;
+  margin-bottom: 30px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   background-color: #fff;
@@ -204,6 +206,10 @@ html {
 .section-portofolio-content .p-box img {
   -webkit-transition: all 1s;
   transition: all 1s;
+}
+
+.section-portofolio-content .p-content {
+  margin-bottom: 30px;
 }
 
 .section-messages-content {
@@ -236,6 +242,10 @@ html {
   margin: 0;
 }
 
+.section-messages-content button {
+  border-radius: 20px;
+}
+
 .section-messages-content input {
   border-radius: 20px;
 }
@@ -264,6 +274,15 @@ footer a:hover {
 footer p {
   margin-top: -45px;
   color: #fff;
+}
+
+.social-media-content .s-information {
+  padding-top: 28px;
+}
+
+.social-media-content p {
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .line-mf {
@@ -303,5 +322,14 @@ footer p {
   bottom: 30px;
   pointer-events: auto;
   opacity: 1;
+}
+
+.section-breadcrumb-content a {
+  text-decoration: none;
+}
+
+.section-breadcrumb-content li {
+  font-size: 18px;
+  font-weight: 400;
 }
 /*# sourceMappingURL=main.css.map */
