--- a/style/main.scss
+++ b/style/main.scss
@@ -197,6 +197,7 @@ html {
 }
 
 .section-messages-content {
+    margin-bottom: 30px;
     margin-top: 100px;
     h3 {
         font-family: "Merriweather Sans";
