--- a/style/main.css
+++ b/style/main.css
@@ -14,6 +14,10 @@ html {
   scroll-behavior: smooth;
 }
 
+.navbar {
+  background-color: #f5f5f5;
+}
+
 .navbar .navbar-brand img {
   max-height: 40px;
 }
