--- a/style/main.scss
+++ b/style/main.scss
@@ -175,11 +175,13 @@ html {
             color: #363636 !important;
         }
     }
+    .portofolio-content-img {
+        background-color: #fff;
+    }
     .p-box {
         margin-bottom: 30px;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
-        background-color: #fff;
     }
     .p-box:hover img {
         -webkit-transform: scale(1.3);
@@ -188,83 +190,62 @@ html {
     .p-box {
         display: block;
         overflow: hidden;
+        border-radius: 12px;
     }
     .p-box img {
         transition: all 1s;
     }
     .p-content {
         margin-bottom: 30px;
+        background-color: #fff;
     }
 }
 
-.section-messages-content {
-    margin-bottom: 50px;
-    margin-top: 100px;
-    h3 {
-        font-family: "Merriweather Sans";
-        font-size: 32px;
-        font-weight: 500;
-        color: #000;
-    }
-    form {
-        margin-top: 30px;
-    }
+.section-footer {
+    background-color: #fff;
+    margin-top: 80px;
     .figure {
-        margin-top: 30px;
-        img {
-            max-height: 70px;
+        a {
+            img {
+                max-height: 50px;
+            }
+        }
+        h5 {
+            font-size: 20px;
+            color: #363636;
+        }
+        .address {
+            font-size: 18px;
+            font-weight: 400;
+        }
+        .contact-us {
+            font-size: 18px;
+            font-weight: 400;
         }
     }
-    .line-mf {
-        width: 40px;
-        height: 5px;
-        background-color: #0d6efd;
-        margin: 0;
+    h5 {
+        font-size: 22px;
+        color: #363636;
     }
-    button {
-        border-radius: 20px;
+    li {
+        list-style: none;
+        margin-left: -32px;
     }
-    input {
-        border-radius: 20px;
-    }
-    textarea {
-        border-radius: 20px;
-        height: 100px;
-    }
-}
-
-footer {
-    margin-top: -40px;
-    font-size: 18px;
     a {
-        text-decoration: none;
-        color: #fff;
+        text-decoration: none !important;
+        font-size: 18px;
+        font-weight: 400;
+        color: #363636 !important;
         &:hover {
-            color: #020277;
-            transition: 0.7s;
+            color: #085cda !important;
         }
     }
-    p {
-        margin-top: -45px;
-        color: #fff;
-    }
-}
-
-.social-media-content {
-    .s-information {
-        padding-top: 28px;
-    }
-    p {
+    .copyright {
+        margin-top: 80px !important;
+        margin-bottom: 10px !important;
         font-size: 18px;
         font-weight: 400;
     }
-}
-
-.line-mf {
-    width: 40px;
-    height: 5px;
-    background-color: #0d6efd;
-    margin: 0 auto;
 }
 
 // to-top
