add img & update file index & css

--- a/style/main.css
+++ b/style/main.css
@@ -244,6 +244,14 @@ html {
   color: #0d6efd;
 }
 
+.section-social-media .social-media img {
+  max-height: 30px !important;
+}
+
+footer {
+  margin-top: 50px;
+}
+
 footer .f-description {
   text-decoration: none;
   color: #363636;
