--- a/style/main.scss
+++ b/style/main.scss
@@ -202,7 +202,9 @@ html {
 }
 
 .section-social-media {
+    background-color: #fff;
     margin-top: 100px;
+    height: 350px;
     img {
         max-height: 50px;
     }
@@ -226,7 +228,7 @@ html {
 }
 
 footer {
-    margin-top: 50px;
+    background-color: #fff;
     .f-description {
         text-decoration: none;
         color: #363636;
