update file all

--- a/style/main.scss
+++ b/style/main.scss
@@ -1,282 +1,13 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: "roboto", serif;
-    background-color: #f5f5f5;
-    color: #4e4e4e;
-    box-sizing: border-box;
-    transition: background 0.5s linear;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-.navbar {
-    background-color: #f5f5f5;
-    .navbar-brand {
-        img {
-            max-height: 40px;
-        }
-    }
-    .navbar-nav {
-        .active {
-            font-size: 18px;
-            font-weight: 500;
-            color: #363636 !important;
-        }
-        a {
-            font-size: 18px;
-            font-weight: normal;
-            color: #363636 !important;
-        }
-    }
-}
-
-.section-content-header {
-    h5 {
-        color: #000000;
-        font-size: 20px;
-        font-weight: 200;
-    }
-    h1 {
-        font-family: "Merriweather Sans";
-        font-weight: bold;
-        font-size: 48px;
-        color: #0000be;
-        // color: #020277;
-        // color: #004cbe;
-    }
-    p {
-        font-weight: 300;
-        font-size: 18px;
-        color: #494949;
-    }
-    .btn-hire {
-        background-color: #0d6efd;
-        color: #fff !important;
-        &:hover {
-            background-color: #085cda;
-            color: #fff;
-        }
-    }
-}
-
-.section-about-content {
-    margin-top: 120px;
-    h3 {
-        font-family: "Merriweather Sans";
-        font-size: 32px;
-        font-weight: 500;
-        color: #000;
-    }
-    .a-information {
-        color: #8d8d8d;
-        font-weight: normal;
-        font-size: 18px;
-    }
-    p {
-        color: #363636;
-        font-weight: normal;
-        font-size: 18px;
-    }
-}
-
-.section-education-content {
-    .figure {
-        h5 {
-            color: #000;
-            font-weight: 500;
-            font-family: "Merriweather Sans";
-            font-size: 20px;
-        }
-        p {
-            color: #363636;
-            font-weight: 400;
-            font-size: 16px;
-        }
-    }
-    .figure {
-        img {
-            max-height: 80px;
-        }
-    }
-}
-
-.section-services-content {
-    margin-top: 120px;
-    h3 {
-        font-family: "Merriweather Sans";
-        font-size: 32px;
-        font-weight: 500;
-        color: #000;
-    }
-    .a-information {
-        color: #8d8d8d;
-        font-weight: normal;
-        font-size: 18px;
-    }
-    .services-content {
-        margin-top: 50px;
-    }
-    h5 {
-        font-family: "Merriweather Sans";
-        font-size: 20px;
-        font-weight: bold;
-        color: #000;
-    }
-    p {
-        color: #363636;
-        font-weight: normal;
-        font-size: 18px;
-    }
-    .card {
-        max-height: 300px !important;
-        min-height: 300px !important;
-        border-radius: 12px;
-        background: #ffffff;
-        box-shadow: 0px 4px 4px rgba(95, 95, 95, 0.3);
-        margin-bottom: 20px;
-        .figure {
-            padding-top: 30px;
-            img {
-                max-height: 80px;
-            }
-        }
-    }
-}
-
-.section-portofolio-content {
-    margin-top: 120px;
-    h3 {
-        font-family: "Merriweather Sans";
-        font-size: 32px;
-        font-weight: 500;
-        color: #000;
-    }
-    .a-information {
-        color: #8d8d8d;
-        font-weight: normal;
-        font-size: 18px;
-    }
-    a {
-        text-decoration: none;
-    }
-    .p-content-img {
-        margin-top: 50px;
-    }
-    h2 {
-        font-size: 1.2rem;
-        font-family: "Merriweather Sans";
-        color: #000;
-    }
-    .p-more {
-        .p-date {
-            color: #363636 !important;
-        }
-    }
-    .portofolio-content-img {
-        background-color: #fff;
-    }
-    .p-box {
-        margin-bottom: 30px;
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-    }
-    .p-box:hover img {
-        -webkit-transform: scale(1.3);
-        transform: scale(1.3);
-    }
-    .p-box {
-        display: block;
-        overflow: hidden;
-        border-radius: 12px;
-    }
-    .p-box img {
-        transition: all 1s;
-    }
-    .p-content {
-        margin-bottom: 30px;
-        background-color: #fff;
-    }
-}
-
-.section-social-media {
-    background-color: #fff;
-    margin-top: 100px;
-    height: 350px;
-    img {
-        max-height: 50px;
-    }
-    .description {
-        color: #363636;
-        font-size: 16px;
-    }
-    a {
-        color: #363636;
-        text-decoration: none;
-        font-size: 16px;
-        &:hover {
-            color: #0d6efd;
-        }
-    }
-    .social-media {
-        img {
-            max-height: 30px !important;
-        }
-    }
-}
-
-footer {
-    background-color: #fff;
-    .f-description {
-        text-decoration: none;
-        color: #363636;
-        font-size: 16px;
-    }
-    a {
-        text-decoration: none;
-        color: #363636;
-        font-size: 16px;
-    }
-}
-
-// to-top
-.to-top {
-    background: #0d6efd;
-    position: fixed;
-    bottom: 16px;
-    right: 30px;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    color: #fff;
-    text-decoration: none;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.4s;
-}
-
-.active {
-    bottom: 30px;
-    pointer-events: auto;
-    opacity: 1;
-}
-
-// End to-top
-// ============================================= //
-// Details Css //
-// ============================================= //
-.section-breadcrumb-content {
-    a {
-        text-decoration: none;
-    }
-    li {
-        font-size: 18px;
-        font-weight: 400;
-    }
-}
+@import "../libraries/bootstrap/css/bootstrap.css";
+@import "global";
+@import "font";
+@import "navbar";
+@import "pages/about";
+@import "pages/auth";
+@import "pages/blog";
+@import "pages/footer";
+@import "pages/portofolio";
+@import "pages/service";
+@import "components/breadcrumbs";
+@import "components/detail_portofolio";
+@import "transitions/slide_fade";
