--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,5 @@
+@import url(d:\FINANSIAL\frontend\libraries\bootstrap\css\bootstrap.css);
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap");
 body {
   margin: 0;
   padding: 0;
@@ -12,6 +14,38 @@ body {
 
 html {
   scroll-behavior: smooth;
+}
+
+.to-top {
+  background: #0d6efd;
+  position: fixed;
+  bottom: 16px;
+  right: 30px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 24px;
+  color: #fff;
+  text-decoration: none;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.active {
+  bottom: 30px;
+  pointer-events: auto;
+  opacity: 1;
 }
 
 .navbar {
@@ -32,35 +66,6 @@ html {
   font-size: 18px;
   font-weight: normal;
   color: #363636 !important;
-}
-
-.section-content-header h5 {
-  color: #000000;
-  font-size: 20px;
-  font-weight: 200;
-}
-
-.section-content-header h1 {
-  font-family: "Merriweather Sans";
-  font-weight: bold;
-  font-size: 48px;
-  color: #0000be;
-}
-
-.section-content-header p {
-  font-weight: 300;
-  font-size: 18px;
-  color: #494949;
-}
-
-.section-content-header .btn-hire {
-  background-color: #0d6efd;
-  color: #fff !important;
-}
-
-.section-content-header .btn-hire:hover {
-  background-color: #085cda;
-  color: #fff;
 }
 
 .section-about-content {
@@ -103,56 +108,94 @@ html {
   max-height: 80px;
 }
 
-.section-services-content {
-  margin-top: 120px;
-}
-
-.section-services-content h3 {
+.section-content-login figure h3 {
   font-family: "Merriweather Sans";
-  font-size: 32px;
-  font-weight: 500;
-  color: #000;
-}
-
-.section-services-content .a-information {
-  color: #8d8d8d;
-  font-weight: normal;
-  font-size: 18px;
-}
-
-.section-services-content .services-content {
-  margin-top: 50px;
-}
-
-.section-services-content h5 {
-  font-family: "Merriweather Sans";
-  font-size: 20px;
   font-weight: bold;
+  font-size: 24px;
   color: #000;
 }
 
-.section-services-content p {
+.section-content-login figure img {
+  max-height: 50px;
+}
+
+.section-content-login p {
+  text-decoration: none;
+  color: #727272;
+  font-size: 16px;
+}
+
+.section-content-login form label {
+  text-decoration: none;
+  color: #727272;
+  font-size: 16px;
+}
+
+.section-content-login form input {
+  border-radius: 20px;
+}
+
+.section-content-login form .btn {
+  border-radius: 20px;
+}
+
+.section-content-login form a {
   color: #363636;
-  font-weight: normal;
-  font-size: 18px;
+  text-decoration: none;
+  font-size: 16px;
 }
 
-.section-services-content .card {
-  max-height: 300px !important;
-  min-height: 300px !important;
-  border-radius: 12px;
-  background: #ffffff;
-  -webkit-box-shadow: 0px 4px 4px rgba(95, 95, 95, 0.3);
-          box-shadow: 0px 4px 4px rgba(95, 95, 95, 0.3);
-  margin-bottom: 20px;
+.section-content-login form a:hover {
+  color: #0d6efd;
 }
 
-.section-services-content .card .figure {
-  padding-top: 30px;
+.section-content-login form .card {
+  border-radius: 20px;
 }
 
-.section-services-content .card .figure img {
-  max-height: 80px;
+.section-social-media {
+  background-color: #fff;
+  margin-top: 100px;
+  height: 350px;
+}
+
+.section-social-media img {
+  max-height: 50px;
+}
+
+.section-social-media .description {
+  color: #363636;
+  font-size: 16px;
+}
+
+.section-social-media a {
+  color: #363636;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.section-social-media a:hover {
+  color: #0d6efd;
+}
+
+.section-social-media .social-media img {
+  max-height: 30px !important;
+}
+
+footer {
+  background-color: #fff;
+}
+
+footer .f-description {
+  text-decoration: none;
+  color: #363636;
+  font-size: 16px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #363636;
+  font-size: 16px;
 }
 
 .section-portofolio-content {
@@ -214,6 +257,7 @@ html {
 .section-portofolio-content .p-box img {
   -webkit-transition: all 1s;
   transition: all 1s;
+  max-height: 300px;
 }
 
 .section-portofolio-content .p-content {
@@ -221,81 +265,85 @@ html {
   background-color: #fff;
 }
 
-.section-social-media {
-  background-color: #fff;
-  margin-top: 100px;
-  height: 350px;
+.section-services-content {
+  margin-top: 120px;
 }
 
-.section-social-media img {
-  max-height: 50px;
+.section-services-content h3 {
+  font-family: "Merriweather Sans";
+  font-size: 32px;
+  font-weight: 500;
+  color: #000;
 }
 
-.section-social-media .description {
+.section-services-content .a-information {
+  color: #8d8d8d;
+  font-weight: normal;
+  font-size: 18px;
+}
+
+.section-services-content .services-content {
+  margin-top: 50px;
+}
+
+.section-services-content h5 {
+  font-family: "Merriweather Sans";
+  font-size: 20px;
+  font-weight: bold;
+  color: #000;
+}
+
+.section-services-content p {
   color: #363636;
-  font-size: 16px;
+  font-weight: normal;
+  font-size: 18px;
 }
 
-.section-social-media a {
-  color: #363636;
-  text-decoration: none;
-  font-size: 16px;
+.section-services-content .card {
+  max-height: 300px !important;
+  min-height: 300px !important;
+  border-radius: 12px;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 4px 4px rgba(95, 95, 95, 0.3);
+          box-shadow: 0px 4px 4px rgba(95, 95, 95, 0.3);
+  margin-bottom: 20px;
 }
 
-.section-social-media a:hover {
-  color: #0d6efd;
+.section-services-content .card .figure {
+  padding-top: 30px;
 }
 
-.section-social-media .social-media img {
-  max-height: 30px !important;
+.section-services-content .card .figure img {
+  max-height: 80px;
 }
 
-footer {
-  background-color: #fff;
+.section-content-header h5 {
+  color: #000000;
+  font-size: 20px;
+  font-weight: 200;
 }
 
-footer .f-description {
-  text-decoration: none;
-  color: #363636;
-  font-size: 16px;
+.section-content-header h1 {
+  font-family: "Merriweather Sans";
+  font-weight: bold;
+  font-size: 48px;
+  color: #0000be;
 }
 
-footer a {
-  text-decoration: none;
-  color: #363636;
-  font-size: 16px;
+.section-content-header p {
+  font-weight: 300;
+  font-size: 18px;
+  color: #494949;
 }
 
-.to-top {
-  background: #0d6efd;
-  position: fixed;
-  bottom: 16px;
-  right: 30px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 24px;
+.section-content-header .btn-hire {
+  background-color: #0d6efd;
+  color: #fff !important;
+}
+
+.section-content-header .btn-hire:hover {
+  background-color: #085cda;
   color: #fff;
-  text-decoration: none;
-  opacity: 0;
-  pointer-events: none;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-.active {
-  bottom: 30px;
-  pointer-events: auto;
-  opacity: 1;
 }
 
 .section-breadcrumb-content a {
