--- a/style/main.scss
+++ b/style/main.scss
@@ -1,6 +1,6 @@
-@import "../libraries/bootstrap/css/bootstrap.css";
+// @import "../libraries/bootstrap/css/bootstrap.css";
 @import "global";
-@import "font";
+@import "fonts";
 @import "navbar";
 @import "pages/about";
 @import "pages/auth";
