--- a/style/components/_detail_portofolio.scss
+++ b/style/components/_detail_portofolio.scss
@@ -1,3 +1,17 @@
 // Detail Portofolio CSS
 //=======================
-.section-portofolio-gallery {}
+.section-portofolio-gallery {
+    margin-bottom: 50px;
+    img {
+        border-radius: 8px;
+        max-height: 530px;
+    }
+    .thumbnail-image {
+        margin-bottom: 24px;
+        border: 2px solid transparent;
+        &:hover,
+        &.active {
+            border: 2px solid #0d6efd;
+        }
+    }
+}
