--- a/style/main.scss
+++ b/style/main.scss
@@ -2,10 +2,10 @@
 @import "global";
 @import "fonts";
 @import "navbar";
+@import "footer";
 @import "pages/about";
 @import "pages/auth";
 @import "pages/blog";
-@import "pages/footer";
 @import "pages/portofolio";
 @import "pages/service";
 @import "components/breadcrumbs";
