--- a/style/main.css
+++ b/style/main.css
@@ -365,6 +365,43 @@ html {
   border: 2px solid #0d6efd;
 }
 
+.section-detail-portofolio .portofolio-heading .edition {
+  background-color: #41c156 !important;
+  color: #fff;
+  width: 100px;
+  text-align: center;
+  border-radius: 4px;
+  font-weight: 400;
+}
+
+.section-detail-portofolio .portofolio-heading h1 {
+  font-family: "Merriweather Sans";
+  font-size: 36px;
+  font-weight: bold;
+  color: #000;
+}
+
+.section-detail-portofolio .portofolio-heading .category {
+  color: #8d8d8d;
+  font-size: 16px;
+}
+
+.portofolio-description h3 {
+  font-family: "Merriweather Sans";
+  font-size: 32px;
+  font-weight: bold;
+  color: #000;
+}
+
+.portofolio-description .description {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.portofolio-description .description-tools img {
+  max-height: 70px;
+}
+
 .slide-fade-enter-active {
   -webkit-transition: all 0.1s ease;
   transition: all 0.1s ease;
