--- a/style/pages/_blog.scss
+++ b/style/pages/_blog.scss
@@ -3,7 +3,7 @@
   .form-comments,
   .widget-sidebar,
   .box-comments {
-    padding: 2rem;
+    padding: 1rem;
     background-color: #fff;
     margin-bottom: 3rem;
     border-radius: 8px;
@@ -12,7 +12,8 @@
     }
   }
   .article-title {
-    font-size: 2rem;
+    font-size: 30px;
+    font-weight: 600;
     font-family: "Merriweather Sans";
     color: #000;
   }
