--- a/style/_global.scss
+++ b/style/_global.scss
@@ -36,3 +36,10 @@ html {
   pointer-events: auto;
   opacity: 1;
 }
+
+.line-mf {
+  width: 40px;
+  height: 5px;
+  background-color: #0078ff;
+  margin: auto;
+}
