--- a/style/main.css
+++ b/style/main.css
@@ -45,6 +45,13 @@ html {
   opacity: 1;
 }
 
+.line-mf {
+  width: 40px;
+  height: 5px;
+  background-color: #0078ff;
+  margin: auto;
+}
+
 .navbar {
   background-color: #f5f5f5;
 }
