--- a/style/main.css
+++ b/style/main.css
@@ -45,13 +45,6 @@ html {
   opacity: 1;
 }
 
-.line-mf {
-  width: 40px;
-  height: 5px;
-  background-color: #0078ff;
-  margin: auto;
-}
-
 .navbar {
   background-color: #f5f5f5;
 }
@@ -150,6 +143,13 @@ html {
 
 .section-education-content .figure img {
   max-height: 80px;
+}
+
+.line-mf {
+  width: 40px;
+  height: 5px;
+  background-color: #0078ff;
+  margin: auto;
 }
 
 .section-content-login figure h3 {
@@ -309,6 +309,7 @@ html {
   width: 40px;
   height: 5px;
   background-color: #0078ff;
+  margin: 0;
 }
 
 .sidebar-search h3 {
@@ -415,6 +416,13 @@ html {
   background-color: #fff;
 }
 
+.line-mf {
+  width: 40px;
+  height: 5px;
+  background-color: #0078ff;
+  margin: auto;
+}
+
 .section-services-content {
   margin-top: 120px;
 }
@@ -465,6 +473,13 @@ html {
 
 .section-services-content .card .figure img {
   max-height: 80px;
+}
+
+.line-mf {
+  width: 40px;
+  height: 5px;
+  background-color: #0078ff;
+  margin: auto;
 }
 
 .section-content-header h5 {
