--- a/style/pages/_blog.scss
+++ b/style/pages/_blog.scss
@@ -3,10 +3,10 @@
   .form-comments,
   .widget-sidebar,
   .box-comments {
-    padding: 1rem;
-    background-color: #fff;
+    // padding: 1rem;
+    // background-color: #fff;
     margin-bottom: 3rem;
-    border-radius: 8px;
+    // border-radius: 8px;
     img {
       border-radius: 8px;
     }
