--- a/style/main.scss
+++ b/style/main.scss
@@ -4,8 +4,8 @@
 @import "navbar";
 @import "footer";
 @import "pages/about";
+@import "pages/about_profile";
 @import "pages/auth";
-@import "pages/blog";
 @import "pages/portofolio";
 @import "pages/service";
 @import "components/breadcrumbs";
