--- a/style/main.css
+++ b/style/main.css
@@ -45,6 +45,26 @@ html {
   opacity: 1;
 }
 
+.modal h3 {
+  font-size: 30px;
+  font-weight: 600;
+  color: #000 !important;
+  font-family: "Merriweather Sans";
+}
+
+.modal p {
+  color: #8d8d8d;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.modal .line-mf {
+  width: 40px;
+  height: 5px;
+  background-color: #0078ff;
+  margin: auto;
+}
+
 .navbar {
   background-color: #f5f5f5;
 }
@@ -152,100 +172,6 @@ html {
   margin: auto;
 }
 
-.section-content-header h3 {
-  font-family: "Merriweather Sans";
-  font-size: 30px;
-  font-weight: 500;
-  color: #000;
-}
-
-.section-content-header span {
-  color: #8d8d8d;
-  font-weight: normal;
-  font-size: 18px;
-}
-
-.section-content-header .description {
-  margin-top: 16px;
-  line-height: 28px;
-  color: #363636;
-  font-weight: 400;
-  font-size: 16px;
-}
-
-.section-profile-content {
-  margin-top: 70px;
-}
-
-.section-profile-content h3 {
-  font-family: "Merriweather Sans";
-  font-size: 30px;
-  font-weight: 500;
-  color: #000;
-}
-
-.section-profile-content span {
-  color: #8d8d8d;
-  font-weight: normal;
-  font-size: 18px;
-}
-
-.section-profile-content .a-information {
-  color: #8d8d8d;
-  font-weight: normal;
-  font-size: 18px;
-}
-
-.section-profile-content p {
-  color: #363636;
-  font-weight: normal;
-  font-size: 18px;
-}
-
-.section-profile-content label {
-  margin-bottom: 10px;
-  margin-top: 16px;
-  color: #363636;
-  font-weight: normal;
-  font-size: 18px;
-}
-
-.section-education-content span {
-  color: #8d8d8d;
-  font-weight: normal;
-  font-size: 18px;
-}
-
-.section-education-content .figure h5 {
-  color: #000;
-  font-weight: 500;
-  font-family: "Merriweather Sans";
-  font-size: 20px;
-}
-
-.section-education-content .figure p {
-  color: #363636;
-  font-weight: 400;
-  font-size: 16px;
-}
-
-.section-education-content .figure img {
-  max-height: 80px;
-}
-
-.line-mf {
-  width: 40px;
-  height: 5px;
-  background-color: #0078ff;
-  margin: auto;
-}
-
-.underline {
-  width: 40px;
-  height: 5px;
-  background-color: #0078ff;
-}
-
 .section-content-login figure h3 {
   font-family: "Merriweather Sans";
   font-weight: bold;
@@ -316,46 +242,68 @@ html {
   margin-top: 50px;
 }
 
-.section-portofolio-content h2 {
+.section-portofolio-content .card {
+  border-radius: 4px;
+}
+
+.section-portofolio-content h5 {
   font-size: 1.2rem;
   font-family: "Merriweather Sans";
   color: #000;
+}
+
+.section-portofolio-content .p-more .p-category {
+  color: #0078ff !important;
 }
 
 .section-portofolio-content .p-more .p-date {
   color: #363636 !important;
 }
 
-.section-portofolio-content .portofolio-content-img {
-  background-color: #fff;
+.line-mf {
+  width: 40px;
+  height: 5px;
+  background-color: #0078ff;
+  margin: auto;
 }
 
-.section-portofolio-content .p-box {
-  margin-bottom: 30px;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+.section-video-content {
+  margin-top: 120px;
 }
 
-.section-portofolio-content .p-box:hover img {
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
+.section-video-content h3 {
+  font-family: "Merriweather Sans";
+  font-size: 32px;
+  font-weight: 500;
+  color: #000;
 }
 
-.section-portofolio-content .p-box {
-  display: block;
-  overflow: hidden;
-  border-radius: 12px;
+.section-video-content .a-information {
+  color: #8d8d8d;
+  font-weight: normal;
+  font-size: 18px;
 }
 
-.section-portofolio-content .p-box img {
-  -webkit-transition: all 1s;
-  transition: all 1s;
-  max-height: 300px;
+.section-video-content a {
+  text-decoration: none;
 }
 
-.section-portofolio-content .p-content {
-  margin-bottom: 30px;
-  background-color: #fff;
+.section-video-content .p-content-img {
+  margin-top: 50px;
+}
+
+.section-video-content h2 {
+  font-size: 1.2rem;
+  font-family: "Merriweather Sans";
+  color: #000;
+}
+
+.section-video-content .p-more .p-date {
+  color: #363636 !important;
+}
+
+.section-video-content figure img {
+  border-radius: 8px;
 }
 
 .line-mf {
@@ -460,77 +408,5 @@ html {
 .section-breadcrumb-content li {
   font-size: 18px;
   font-weight: 400;
-}
-
-.section-portofolio-gallery {
-  margin-bottom: 40px;
-}
-
-.section-portofolio-gallery img {
-  border-radius: 8px;
-  max-height: 495px;
-}
-
-.section-portofolio-gallery .thumbnail-image {
-  margin-bottom: 20px;
-  border: 2px solid transparent;
-}
-
-.section-portofolio-gallery .thumbnail-image:hover, .section-portofolio-gallery .thumbnail-image.active {
-  border: 3px solid #0d6efd;
-}
-
-.section-detail-portofolio .portofolio-heading .edition {
-  background-color: #41c156 !important;
-  color: #fff;
-  width: 100px;
-  text-align: center;
-  border-radius: 4px;
-  font-weight: 400;
-}
-
-.section-detail-portofolio .portofolio-heading h1 {
-  font-family: "Merriweather Sans";
-  font-size: 36px;
-  font-weight: bold;
-  color: #000;
-}
-
-.section-detail-portofolio .portofolio-heading .category {
-  color: #8d8d8d;
-  font-size: 16px;
-}
-
-.portofolio-description h3 {
-  font-family: "Merriweather Sans";
-  font-size: 32px;
-  font-weight: bold;
-  color: #000;
-}
-
-.portofolio-description .description {
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.portofolio-description .description-tools img {
-  max-height: 70px;
-}
-
-.slide-fade-enter-active {
-  -webkit-transition: all 0.1s ease;
-  transition: all 0.1s ease;
-}
-
-.slide-fade-leave-active {
-  -webkit-transition: all 0.1s cubic-bezier(1, 0.5, 0.8, 1);
-  transition: all 0.1s cubic-bezier(1, 0.5, 0.8, 1);
-}
-
-.slide-fade-enter,
-.slide-fade-leave-to {
-  -webkit-transform: translateY(7px);
-          transform: translateY(7px);
-  opacity: 0.1;
 }
 /*# sourceMappingURL=main.css.map */
