--- a/style/main.scss
+++ b/style/main.scss
@@ -4,10 +4,8 @@
 @import "navbar";
 @import "footer";
 @import "pages/about";
-@import "pages/about_profile";
 @import "pages/auth";
 @import "pages/portofolio";
+@import "pages/video";
 @import "pages/service";
 @import "components/breadcrumbs";
-@import "components/detail_portofolio";
-@import "transitions/slide_fade";
