--- a/style/pages/_video.scss
+++ b/style/pages/_video.scss
@@ -1,4 +1,4 @@
-.section-portofolio-content {
+.section-video-content {
   margin-top: 120px;
   h3 {
     font-family: "Merriweather Sans";
@@ -17,20 +17,19 @@
   .p-content-img {
     margin-top: 50px;
   }
-  .card {
-    border-radius: 4px;
-  }
-  h5 {
+  h2 {
     font-size: 1.2rem;
     font-family: "Merriweather Sans";
     color: #000;
   }
   .p-more {
-    .p-category {
-      color: #0078ff !important;
-    }
     .p-date {
       color: #363636 !important;
+    }
+  }
+  figure {
+    img {
+      border-radius: 8px;
     }
   }
 }
